search feature implemented

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book</title>
+    <style>
+      ::selection{
+        background-color: rgb(73, 67, 67);
+        color: azure;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
